# models/models.go
@@ -11,11 +11,10 @@ import (
 
 type User struct {
 	gorm.Model
-	Account      string `gorm:"unique;not null"`
-	Password     string `gorm:"not null"`
-	Name         string
-	Attributes   []UserAttribute
-	PowerRecords []PowerRecord
+	Account    string `gorm:"unique;not null"`
+	Password   string `gorm:"not null"`
+	Name       string
+	Attributes []UserAttribute
 }
 
 type UserAttribute struct {
@@ -43,8 +42,7 @@ type PowerRecord struct {
 	KwhStocked  float64 // power kwh accumulated from buy-order, stocked = stocked - consumed
 	KwhSaleable float64 // power kwh accumulated from produced, saleable = saleable + produced
 	UpdatedAt   time.Time
-	MeterID     string
-	UserID      uint
+	MeterID     string `gorm:"not null"`
 }
 
 /*** e.g
@@ -64,7 +62,20 @@ type Order struct {
 	CreatedAt time.Time
 	ExpiredAt time.Time
 	Status    uint8 //1:un-dealt, 2:dealt, 3:expired, 4:canceled
-	UserID    uint
+	MeterID   string
+	DepositNo string
+}
+
+type OrderBoard struct {
+	ID        string  // UUID           timestamp := time.Now().Unix()
+	Type      uint8   // 1:buy, 2:sell
+	Kwh       float64 // Kwh to be sold
+	KwhDealt  float64 // Kwh already sold
+	Price     float64
+	CreatedAt time.Time
+	ExpiredAt time.Time
+	Status    uint8 //1:un-dealt, 2:dealt, 3:expired, 4:canceled
+	MeterID   string
 	DepositNo string
 }
 
@@ -86,7 +97,7 @@ type DepositRecord struct {
 	Action    string
 	InOut     float64 // in with positive number, out with negative number
 	Balance   float64 // remained balance
-	Money     int
+	Money     float64
 	Memo      string
 	RecDate   time.Time
 }
@@ -112,16 +123,16 @@ var DB *gorm.DB
 
 func init() {
 	var err error
-	//DB, err = gorm.Open("postgres", "host=192.168.43.214 port=15432 user=platformer dbname=platform_db password=postgres sslmode=disable")
-	DB, err = gorm.Open("postgres", "host=192.168.1.4 port=15432 user=platformer dbname=platform_db password=postgres sslmode=disable")
-	//DB, err = gorm.Open("postgres", "host=pgdb port=5432 user=platformer dbname=platform_db password=postgres sslmode=disable")
+	//DB, err = gorm.Open("postgres", "host=128.199.88.117 port=15432 user=platformer dbname=platform_db password=postgres sslmode=disable")
+	//DB, err = gorm.Open("postgres", "host=192.168.1.4 port=15432 user=platformer dbname=platform_db password=postgres sslmode=disable")
+	DB, err = gorm.Open("postgres", "host=pgdb port=5432 user=platformer dbname=platform_db password=postgres sslmode=disable")
 	if err != nil {
 		panic(err)
 	}
 
 	DB.LogMode(true)
 	DB.SingularTable(true)
-	DB.AutoMigrate(&User{}, &UserAttribute{}, &PowerRecord{}, &Order{}, &DealTxn{}, &DepositRecord{}, &MeterDeposit{})
+	DB.AutoMigrate(&User{}, &UserAttribute{}, &PowerRecord{}, &Order{}, &OrderBoard{}, &DealTxn{}, &DepositRecord{}, &MeterDeposit{})
 }
 
 func AddUser(u User) error {
@@ -145,6 +156,13 @@ func AddOrder(odr Order) error {
 	return nil
 }
 
+func AddOrderBoard(ob OrderBoard) error {
+	if DB.Create(&ob).Error != nil {
+		return errors.New("error while adding OrderBoard")
+	}
+	return nil
+}
+
 func AddDealTxn(txn DealTxn) error {
 	if DB.Create(&txn).Error != nil {
 		return errors.New("error while adding DealTxn")
@@ -159,37 +177,38 @@ func AddDepositRecord(drecord DepositRecord) error {
 	return nil
 }
 
-func AddPowerRecord(pr PowerRecord) error {
-	lastPR := GetLatestPowerRecord(pr.UserID)
+func AddPowerRecord(pr *PowerRecord) (*PowerRecord, error) {
+	lastPR := GetLatestPowerRecord(pr.MeterID)
 	pr.KwhStocked = lastPR.KwhStocked - pr.KwhConsumed
 	pr.KwhSaleable = lastPR.KwhSaleable + pr.KwhProduced
-	if DB.Create(&pr).Error != nil {
-		return errors.New("error while adding PowerRecord")
+	if DB.Create(pr).Error != nil {
+		return pr, errors.New("error while adding PowerRecord")
 	}
-	return nil
+	return pr, nil
 }
 
 func UpdatePowerRecordByTxn(txn DealTxn) error {
-	local, _ := time.LoadLocation("Local")
-	now := time.Now().In(local)
-
+	// local, _ := time.LoadLocation("Local")
+	// now := time.Now().In(local)
+	now := time.Now().UTC().Add(8 * time.Hour)
 	var buy, sell Order
 	DB.First(&buy, "id = ?", txn.BuyOrderID)
 	DB.First(&sell, "id = ?", txn.SellOrderID)
-
-	brecord := GetLatestPowerRecord(buy.UserID)
+	mtBuy := GetMeterDepositByDepositNo(buy.DepositNo)
+	brecord := GetLatestPowerRecord(mtBuy.MeterID)
 	stocked := brecord.KwhStocked + txn.Kwh
 	buyPR := PowerRecord{0, 0, stocked,
-		brecord.KwhSaleable, now, brecord.MeterID, brecord.UserID}
+		brecord.KwhSaleable, now, brecord.MeterID}
 
 	if DB.Create(&buyPR).Error != nil {
 		return errors.New("error while updating Power Record of Meter ID[" + buyPR.MeterID + "]")
 	}
 
-	srecord := GetLatestPowerRecord(sell.UserID)
+	mtSell := GetMeterDepositByDepositNo(sell.DepositNo)
+	srecord := GetLatestPowerRecord(mtSell.MeterID)
 	saleable := srecord.KwhSaleable - txn.Kwh
 	sellPR := PowerRecord{0, 0, srecord.KwhStocked,
-		saleable, now, srecord.MeterID, srecord.UserID}
+		saleable, now, srecord.MeterID}
 	if DB.Create(&sellPR).Error != nil {
 		return errors.New("error while updating Power Record of Meter ID[" + sellPR.MeterID + "]")
 	}
@@ -232,9 +251,10 @@ func AllUsers(page int, pagination int) (users []User, count int) {
 	return users, count
 }
 
-func LoginCheck(account string, passwd string) (*User, bool) {
-	user := new(User)
-	DB.Where(&User{Account: account, Password: passwd}).First(user)
+func LoginCheck(account string, passwd string) (User, bool) {
+	user := User{}
+	//DB.Where(&User{Account: account, Password: passwd}).First(&user)
+	DB.Where("account = ? AND password = ?", account, passwd).Find(&user)
 	if user.Account == "" {
 		return user, false
 	}
@@ -242,23 +262,31 @@ func LoginCheck(account string, passwd string) (*User, bool) {
 	return user, true
 }
 
-func GetUserPowerRecords(uid uint, page int, pagination int) (records []PowerRecord, count int) {
-	var user User
-	DB.First(&user, uid)
+func GetPowerRecordsByMeter(mid string, page int, pagination int) (records []PowerRecord, count int) {
+	//var user User
+	//DB.First(&user, uid)
 
-	DB.Where("user_id = ?", uid).Model(&PowerRecord{}).Count(&count)
+	DB.Where("meter_id = ?", mid).Model(&PowerRecord{}).Count(&count)
 	//var records []PowerRecord
-	DB.Offset((page - 1) * pagination).Limit(pagination).Model(&user).Related(&records)
+	DB.Offset((page-1)*pagination).Limit(pagination).Where("meter_id = ?", mid).Find(&records)
 	return records, count
 }
 
-func GetUserUndealtOrders(uid uint, tpe uint8, page int, pagination int) (orders []Order, count int) {
-	var user User
-	DB.First(&user, uid)
+func GetUndealtOrdersByMeter(mid string, tpe uint8, page int, pagination int) (orders []Order, count int) {
+	DB.Where("meter_id = ? AND status = ? AND type = ?", mid, 1, tpe).Model(&Order{}).Count(&count)
+	DB.Offset((page-1)*pagination).Limit(pagination).Where("meter_id = ? AND status = ? AND type = ?", mid, 1, tpe).Find(&orders)
 
-	DB.Where("user_id = ? AND status = ? AND type = ?", uid, 1, tpe).Model(&Order{}).Count(&count)
-	DB.Offset((page-1)*pagination).Limit(pagination).Where("status = ? AND type = ?", 1, tpe).Model(&user).Related(&orders)
 	return orders, count
+}
+
+func GetUndealtKwhByMeter(mid string, tpe uint8) float64 {
+	type Result struct {
+		Undealt float64
+	}
+	var result Result
+	DB.Table("order").Select("sum(kwh - kwh_dealt) as Undealt").Where("meter_id = ? AND status = ? AND type = ?", mid, 1, tpe).Scan(&result)
+	//fmt.Printf("kwh: %f\n", result.Undealt)
+	return result.Undealt
 }
 
 func GetUserMeters(uid uint) (meters []MeterDeposit) {
@@ -267,20 +295,20 @@ func GetUserMeters(uid uint) (meters []MeterDeposit) {
 }
 
 func GetUserAllUndealtOrders(uid uint, tpe uint8) (orders []Order) {
-	var user User
-	DB.First(&user, uid)
+	// var user User
+	// DB.First(&user, uid)
 
-	DB.Where("status = ? AND type = ?", 1, tpe).Model(&user).Related(&orders)
+	// DB.Where("status = ? AND type = ?", 1, tpe).Model(&user).Related(&orders)
 	return orders
 }
 
-func GetLatestPowerRecord(uid uint) (prd PowerRecord) {
+func GetLatestPowerRecord(mid string) (prd PowerRecord) {
 	//var prd PowerRecord
 
-	//now := time.Now().UTC().Add(8*time.Hour)
-	local, _ := time.LoadLocation("Local")
-	now := time.Now().In(local)
-	DB.Order("updated_at desc").Where("user_id = ? AND updated_at < ? ", uid, now).First(&prd)
+	now := time.Now().UTC().Add(8 * time.Hour)
+	// local, _ := time.LoadLocation("Asia/Taipei")
+	// now := time.Now().In(local)
+	DB.Order("updated_at desc").Where("meter_id = ? AND updated_at < ?", mid, now).First(&prd)
 	//fmt.Printf("%+v\n", prd)
 
 	return
@@ -288,9 +316,9 @@ func GetLatestPowerRecord(uid uint) (prd PowerRecord) {
 
 func GetLatestMeterDeposit(orgId uint) interface{} {
 	var meter MeterDeposit
-	//now := time.Now().UTC().Add(8*time.Hour)
-	local, _ := time.LoadLocation("Local")
-	now := time.Now().In(local)
+	now := time.Now().UTC().Add(8 * time.Hour)
+	// local, _ := time.LoadLocation("Asia/Taipei")
+	// now := time.Now().In(local)
 	DB.Order("updated_at desc").Where("org_id = ? AND updated_at < ? ", orgId, now).First(&meter)
 	//fmt.Printf("%+v\n", prd)
 	if meter.MeterID == "" {
@@ -299,8 +327,65 @@ func GetLatestMeterDeposit(orgId uint) interface{} {
 	return meter
 }
 
-func GetSelectedMeterDeposit(uid uint) (meter MeterDeposit) {
-	DB.Where("user_id = ? AND selected = true", uid).Find(&meter)
+func GetDefaultMeterDeposit(uid uint) (meter MeterDeposit) {
+	DB.Where("user_id = ? AND is_default = true", uid).Find(&meter)
+	return
+}
+
+func GetMeterDepositByID(mid string) (meter MeterDeposit) {
+	DB.Where("meter_id = ?", mid).Find(&meter)
+	return
+}
+
+func GetMeterDepositByDepositNo(depo_no string) (meter MeterDeposit) {
+	DB.Where("deposit_no = ?", depo_no).Find(&meter)
+	return
+}
+
+func GetUndealtOrders(tpe uint8) (orders []OrderBoard) {
+	if tpe == 1 {
+		DB.Order("price desc").Order("created_at asc").Where("status = ? AND type = ? AND expired_at > NOW()", 1, tpe).Find(&orders)
+	} else if tpe == 2 {
+		DB.Order("price asc").Order("created_at asc").Where("status = ? AND type = ? AND expired_at > NOW()", 1, tpe).Find(&orders)
+	}
 
 	return
+}
+
+func UpdateOrderLocked(oid string, txnKwh float64) error {
+	var order Order
+	tx := DB.Begin()
+	tx.Begin()
+
+	notFound := DB.Raw("SELECT * FROM public.order_board WHERE id=? FOR UPDATE;", oid).Scan(&order).RecordNotFound()
+	if notFound {
+		return errors.New("order: " + oid + " already closed")
+	}
+
+	order.KwhDealt = order.KwhDealt + txnKwh
+	if order.Kwh == order.KwhDealt {
+		tx.Exec("DELETE FROM public.order_board WHERE id = ?", oid)
+	} else {
+		tx.Exec("UPDATE public.order_board SET kwh_dealt=? WHERE id = ?", order.KwhDealt, oid)
+	}
+
+	tx.Commit()
+	//fmt.Printf("%+v\n", order)
+	//DB.First(&order, "id = ?", oid)
+	return nil
+}
+
+func (ob *OrderBoard) Transmit(order Order) OrderBoard {
+	ob.ID = order.ID
+	ob.Type = order.Type
+	ob.Price = order.Price
+	ob.Kwh = order.Kwh
+	ob.KwhDealt = order.KwhDealt
+	ob.Status = order.Status
+	ob.MeterID = order.MeterID
+	ob.DepositNo = order.DepositNo
+	ob.CreatedAt = order.CreatedAt
+	ob.ExpiredAt = order.ExpiredAt
+
+	return *ob
 }
